apps/kiali-operator/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: kiali-operator
  labels:
    app: kiali
  annotations:
    link.argocd.argoproj.io/external-link: https://kiali.analect.com
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - "kiali.analect.com"
  http:
  - headers:
      request:
        set:
          X-Forwarded-Port: "443"
    route:
    - destination:
        host: kiali.kiali-operator.svc.cluster.local
        port:
          number: 20001
